tests/fails/opaque2.t


terra what(a : opaque)
end


what:compile()